--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_zoom_drawer: ^3.0.4+1
   animated_splash_screen: ^1.3.0
   page_transition: ^2.0.9
+  rflutter_alert: ^2.0.7
 
 dev_dependencies:
   flutter_test:
